# web-project

./: .env.sample  .gitignore  LICENSE  main.py  pyproject.toml  test.py
app/: main.py
app/core/: config.py
app/db/: session.py
database/: docker-compose.yml
